apps/media-downloaders/qbittorrent/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media-downloaders
spec:
  serviceName: qbittorrent
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent
          ports:
            - name: "http"
              containerPort: 8080
              protocol: TCP
            - name: "bittorrent"
              containerPort: 6881
              protocol: TCP
            - name: "bittorrent-udp"
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-media
              mountPath: /data/torrents
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-media
          persistentVolumeClaim:
            claimName: qbittorrent-media
