apps/media-downloaders/qbittorrent/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media-downloaders
  labels:
    app: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 8080
      port: 8080
